tutorials/k8s/deploy/mongo/mongoexpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-deployment
  labels:
    app: mongo-express 
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: mongo-express 
  template: 
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports: 
        - containerPort: 27017
        # env можно посмотреть в Dockerhub https://hub.docker.com/_/mongo-express
