tutorials/k8s/deploy/mongo/mongodb-service.yaml
---
apiVersion: v1 
kind: Service 
metadata:
  name: mongodb-service
spec:
  # selector - к какому container подключиться
  selector:
    app: mongodb 
  ports:
    - protocol: TCP 
      port: 27017
      targetPort: 27017
