tutorials/k8s/deploy/mongo/mongoexpress-service.yaml
---
apiVersion: v1 
kind: Service 
metadata:
  name: mongo-express-service
spec:
  # selector - к какому container подключиться
  selector:
    app: mongo-express 
  # для создания подключения внешних запросов к kuber
  type: LoadBalancer
  ports:
    - protocol: TCP 
      port: 8081
      targetPort: 8081
      # port для внешного подключения (значение от 30000 - 32767)
      nodePort: 30000
